fix card content overflow

--- a/style2.css
+++ b/style2.css
@@ -97,18 +97,18 @@ h1 {
   left: 50%;
   width: 50vw;
   top: 80%;
-  height: auto;
+  height: 130px;
   transform: translate(-50%, -50%);
 }
 
 #nxtbtn,
 #confno {
-  bottom: 10%;
+  bottom: 4%;
   right: 10%;
 }
 #skipbtn,
 #confyes {
-  bottom: 10%;
+  bottom: 4%;
   left: 10%;
 }
 #hintbtn {
@@ -234,7 +234,7 @@ h1 {
   }
 
   #card1 {
-    height: 300px;
+    height: 420px;
     width: 80%;
     top: 50%;
     left: 50%;
